--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "axios": "^0.26.0",
     "vue": "^3.2.31",
-    "vue-router": "^4.0.12"
+    "vue-router": "^4.0.12",
+    "vue3-simple-typeahead": "^1.0.5"
   },
   "devDependencies": {
     "@headlessui/vue": "^1.4.3",
