--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "vite --host",
     "build": "vite build",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "cypress:open": "cypress open"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -23,8 +24,10 @@
     "@types/tailwindcss": "^3.0.7",
     "@vitejs/plugin-vue": "^2.2.0",
     "autoprefixer": "^10.4.2",
+    "cypress": "^9.5.1",
     "prettier-plugin-tailwindcss": "^0.1.7",
     "tailwindcss": "^3.0.22",
+    "typescript": "^4.6.2",
     "vite": "^2.8.1"
   }
 }
