--- a/netlify.toml
+++ b/netlify.toml
@@ -13,4 +13,4 @@
   for = "/*"
   [headers.values]
     Permissions-Policy = "interest-cohort=()"
-    Access-Control-Allow-Origin: *
+    Access-Control-Allow-Origin = *
